<resources>
    <string name="app_name">RideSync</string>
    <string name="default_web_client_id">975825284599-1k3tpu4mm9ojsi09igpfmrvqku134rfa.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_maps_key">***REMOVED***</string>
    <string name="open_drawer">Open Navigation Drawer</string>
    <string name="close_drawer">Close Navigation Drawer</string>
    <string name="login_title">Bienvenido</string>
    <string name="login_subtitle">Bienvenido! Porfavor completa los campos.</string>
    <string name="tvEmail_text">Email</string>
    <string name="etEmail_text">Introduce tu Email</string>
    <string name="tvPassword_text">Contraseña</string>
    <string name="edPassword_text">Introduce tu contraseña</string>
    <string name="cbRemeber_text">Recuerdame</string>
    <string name="btnLoggin_text">Iniciar Sesión</string>
    <string name="btnGoogleLogin_text">Iniciar sesión con Google</string>
    <string name="tvRegister_text">¿No tienes cuenta?</string>
    <string name="btnRegister_text">Regístrate</string>
    <string name="tvCreateAccount_text">Crear tu cuenta</string>
    <string name="btnGoogleRegister_text">Registrarse con Google</string>
    <string name="btnRegister_text2">Registrarse</string>
    <string name="tvFullName_text">Nombre completo</string>
    <string name="etFullName_text">Nombre completo</string>
    <string name="edPassword_text2">Contraseña</string>
    <string name="tvConfirmPassword_text">Confirmar contraseña</string>
    <string name="etConfirmPassword_text">Confirmar contraseña</string>
    <string name="tbActivities_text">Actividades</string>
    <string name="tbShops_text">Tiendas</string>
    <string name="chipAll_text">Todos</string>
    <string name="chipRoutes_text">Rutas</string>
    <string name="chipRestaurants_text">Restuarantes</string>
    <string name="chipMettings_text">Quedadas</string>
    <string name="chipCareer_text">Carreras</string>
    <string name="chipEvents_text">Eventos</string>
    <string name="chipOthers_text">Otros</string>
    <string name="tvEmptyListActivities_text">No hay tiendas</string>
    <string name="tvEmptyListShops_text">No hay tiendas</string>
    <string name="chipITV_text">ITV</string>
    <string name="chipTires_text">Neumáticos</string>
    <string name="chipDetailing_text">Detailing</string>
    <string name="chipMechanics_text">Mecánica</string>
    <string name="chipBodyWork_text">Chapa y pintura</string>
    <string name="chipWrap_text">Vinilos</string>
    <string name="chipTuning_text">Tuning</string>
    <string name="chipSpareParts_text">Recambios</string>
    <string name="tabItemMyGroups_text">Mis grupos</string>
    <string name="tabItemExplorer_text">Explorar</string>
    <string name="tvPressGroup_text">Pulsa a un grupo para unirte</string>
    <string name="ivEmptyListMyGroups_text">Unete a un grupo para comenzar</string>
    <string name="tvUserName_text">Username</string>
    <string name="tvEmptyListPhotos_text">No hay publicaciones</string>
    <string name="tvTittleActivity_text">Titulo</string>
    <string name="tvNameShop_text">Nombre</string>
    <string name="tvDescripcion_text">Descripción</string>
    <string name="tvType_text">Tipo</string>
    <string name="tvPhone_text">Teléfono</string>
    <string name="tvAddress_text">Dirección</string>
    <string name="btnCall_text">Llamar</string>
    <string name="btnVisit_text">Visitar web</string>
    <string name="tvTittle_text">Titulo</string>
    <string name="tvDate_text">Fecha</string>
    <string name="tvPriateProfile_text">Perfil privado</string>
    <string name="tbAbout_text">Acerca de RideSync</string>
    <string name="tvAboutRideSync_text">En RideSync, hemos identificado una necesidad significativa dentro de la comunidad motociclista: la falta de una plataforma dedicada exclusivamente a conectar a los entusiastas de las motocicletas. Con mi vasta experiencia en el mundo de las motos, he sido testigo de las dificultades que enfrentan los motociclistas al intentar organizar eventos, coordinar salidas y compartir experiencias de manera eficiente y centralizada. \n\n RideSync nace de esta observación y de la pasión por el motociclismo. Nuestra plataforma está diseñada para servir como un punto de encuentro digital para los motociclistas de todo el mundo. Queremos facilitar la formación de grupos, fomentar la comunicación entre compañeros y promover la organización de eventos y salidas.</string>
    <string name="tvGroupName_text">Nombre del grupo</string>
    <string name="tvGroupMembers_text">Miembros</string>
    <string name="tvEditProfile_text">Editar perfil</string>
    <string name="btnEditImageProfile_text">Editar foto de perfil</string>
    <string name="tilFullName_text">Nombre de completo</string>
    <string name="tvPublicProfile_text">Perfil público</string>
    <string name="tbEditGroup_text">Editar grupo</string>
    <string name="btnEditPhotoGroup_text">Editar foto del grupo</string>
    <string name="tilGroupName_text">Nombre del grupo</string>
    <string name="tilGroupDescription_text">Descripción del grupo</string>
    <string name="tvPrivateGroup_text">Grupo privado</string>
    <string name="tbCreateGroup_text">Crear grupo</string>
    <string name="tvInforCreateGroup_text">Los grupos privados solo pueden ser creados por usuarios premium</string>
    <string name="btnCancel_text">Cancelar</string>
    <string name="btnCreateGroup_text">Crear grupo</string>
    <string name="tvAddUsersTitle_text">Añadir participantes</string>
    <string name="ivEmptyListMessages_text">No hay mensajes</string>
    <string name="etMessage_text">Mensaje...</string>
    <string name="tvName_text">Nombre</string>
    <string name="tvCity_text">Ciudad</string>
    <string name="btnActivity_text">Ver Actividad</string>
    <string name="btnShop_text">Ver Tienda</string>
    <string name="tvAdmin_text">Admin</string>
    <string name="tvMe_text">Yo</string>
    <string name="tvForgotPassword_text">Olvidé mi contraseña</string>
    <string name="tvForgotPasword_text">Recuperar contraseña</string>
    <string name="tvSubTitleForgotPassword_text">Pon tu correo electrónico y te enviaremos un enlace para recuperar tu contraseña</string>
    <string name="btnSend_text">Enviar</string>
</resources>