<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".mainModule.activitiesModule.ActivitiesFragment"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/tbActivities_text"
            app:titleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            app:titleTextColor="@color/md_theme_light_shadow"
            app:titleCentered="true" />

    </com.google.android.material.appbar.AppBarLayout>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin_chipGroup"
        android:scrollbars="none">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/cgMarginStart"
            android:paddingEnd="@dimen/cgPaddingEnd"
            app:chipSpacing="@dimen/chipSpacing"
            app:chipSpacingHorizontal="@dimen/chipSpacing"
            app:chipSpacingVertical="@dimen/chipSpacing"
            app:selectionRequired="true"
            app:singleLine="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipAll"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:checked="true"
                android:text="@string/chipAll_text" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipRoutes"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/chipRoutes_text" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipRestaurants"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/chipRestaurants_text" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipMettings"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/chipMettings_text" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipCareer"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/chipCareer_text" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipEvents"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/chipEvents_text" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipOthers"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/chipOthers_text" />

        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/common_margin_chipGroup">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvActivities"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:fastScrollEnabled="false"
            app:spanCount="2"
            tools:listitem="@layout/item_activity"/>

        <ImageView
            android:id="@+id/ivEmptyList"
            android:layout_width="@dimen/ivEmptyList_width_height"
            android:layout_height="@dimen/ivEmptyList_width_height"
            app:layout_constraintBottom_toTopOf="@id/tvEmptyList"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="@dimen/common_margin_min"
            android:src="@drawable/ic_public_off"
            android:visibility="gone"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvEmptyList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/tvEmptyListActivities_text"
            android:textSize="@dimen/_16sp"
            android:textAlignment="center"
            android:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>