<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/common_margin_items"
    app:cardCornerRadius="@dimen/corner_radius_card"
    app:cardElevation="@dimen/elevation_card">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivPhoto"
            android:layout_width="match_parent"
            android:layout_height="@dimen/itemActivity_height"
            android:scaleType="centerCrop" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin_min"
            android:layout_marginStart="@dimen/common_margin_min"
            android:layout_marginEnd="@dimen/common_margin_min"
            android:textStyle="bold"
            android:textSize="@dimen/_18sp"
            android:text="@string/tvName_text"
            android:maxLines="1"
            android:ellipsize="end"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin_min_item"
            android:layout_marginStart="@dimen/common_margin_min"
            android:layout_marginEnd="@dimen/common_margin_min"
            android:text="@string/tvType_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/common_margin_min"
            android:layout_marginStart="@dimen/common_margin_min"
            android:layout_marginEnd="@dimen/common_margin_min">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_location" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_min_text"
                android:text="@string/tvCity_text"
                android:maxLines="1"
                android:ellipsize="end"/>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin_min"
            android:layout_marginBottom="@dimen/common_margin_min"
            android:layout_marginStart="@dimen/common_margin_min"
            android:layout_marginEnd="@dimen/common_margin_min"
            android:textSize="@dimen/_12sp"
            app:cornerRadius="@dimen/corner_radius_button"
            android:text="@string/btnActivity_text" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>